Fix scroll arrow icon overlap with links

--- a/src/portfolio/pages/ProjectDetail.css
+++ b/src/portfolio/pages/ProjectDetail.css
@@ -34,10 +34,6 @@
   margin-top: 2.4rem;
 }
 
-.project-scroll {
-  height: 8vh;
-}
-
 .post-intro {
   margin: 2.4rem 0;
 }
